<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dynamic IP Otter</string>
    
    <!-- ServerListActivity -->
    <string name="action_refresh">Refresh Servers</string>
    <string name="action_add">Add Server</string>
    <string name="server_list_item_name_hint">sever-name</string>
    <string name="server_list_item_password_hint"></string>
    <string name="server_list_item_ipaddress_hint">0.0.0.0</string>
    <string name="server_list_item_loading">Loading...</string>
    <string name="server_list_item_error">ERROR</string>
    
    <!-- AddServerActivity -->
    <string name="title_activity_add_server">Add Server</string>
    <string name="server_name_hint">Name</string>
    <string name="server_password_hint">Password</string>
    <string name="add_server_button">Add</string>

</resources>
