<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
    	android:orientation="vertical"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:id="@+id/server_list_item_name"
            android:hint="@string/server_list_item_name_hint"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="30sp"
            android:textStyle="italic"
            android:textSize="15sp"
            android:id="@+id/server_list_item_password"
            android:hint="@string/server_list_item_password_hint"
            />
        
    </LinearLayout>
    
    <TextView
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingTop="10sp"
        android:layout_weight="0"
        android:textSize="15sp"
        android:id="@+id/server_list_item_ipaddress"
		android:hint="@string/server_list_item_ipaddress_hint"
        />
    
    <TextView
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingTop="10sp"
        android:layout_weight="0"
        android:textSize="15sp"
        android:textStyle="italic"
        android:id="@+id/server_list_item_loading"
		android:hint="@string/server_list_item_loading"
        />
    
    <TextView
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingTop="10sp"
        android:layout_weight="0"
        android:textSize="15sp"
        android:textColorHint="#f00"
        android:id="@+id/server_list_item_error"
		android:hint="@string/server_list_item_error"
        />
    
</LinearLayout>